# MELD

./: .gitignore  LICENSE  MANIFEST.in  README.md  final.txt  prompt  pyproject.toml  real_cifar_smoke.json  requirements.txt  results_10ep.json  results_30ep.json  results_cifar10.json  results_cifar10_cpu_hard_fast.json  results_final.json  results_small.json  results_smoke.json  results_v2.json  solnnn  test_backbone_pretrained.py  tmp_smoke_results.json
.github/workflows/: ci.yml
delta/: __init__.py  trainer.py
delta/benchmarks/: __init__.py  dataset_base.py  stream.py
delta/core/: __init__.py  calibration.py  certificate.py  fisher.py  shift.py  state.py
delta/demos/: __init__.py  cifar10_benchmark.py  cli.py  robustness.py  runner.py  storage.py
delta/demos/datasets/: __init__.py  loaders.py  providers.py
delta/demos/models/: __init__.py  backbone.py  classifier.py  modeling.py
delta/evaluation/: __init__.py  metrics.py  plugin.py
delta/logging/: __init__.py  csv_logger.py  interactive.py
delta/training/: __init__.py  base.py  fisher_delta.py  full_retrain.py  replay_delta.py
docs/: FULL_ARCHITECTURE.md  PRESENTATION_ARCHITECTURE.md  USAGE.md  theory.md
docs-site/: README.md  index.html  package-lock.json  package.json
docs-site/src/: App.jsx  content.js  docsData.js  main.jsx  navigation.json  siteData.js  styles.css  ui.jsx
docs-site/src/chapters/: Architecture.jsx  Examples.jsx  Installation.jsx  ManualData.jsx  Metrics.jsx  Overview.jsx  Quickstart.jsx  Research.jsx
meld/: __init__.py  api.py  bootstrap.py  cli.py  datasets.py  delta.py  modeling.py
meld/benchmarks/: __init__.py  avalanche_baselines.py  metrics.py  runner.py
meld/core/: Untitled  __init__.py  auto_config.py  corrector.py  drift.py  oracle.py  policy.py  snapshot.py  text_encoder.py  updater.py  weighter.py
meld/interfaces/: __init__.py  base.py  encoder.py
meld/models/: __init__.py  backbone.py  classifier.py
meld/web/: assets.py  catalog.py  server.py
meld/web/frontend/: build.mjs
meld/web/frontend/src/: main.jsx
test_runs/: sitecustomize.py  test_10_resnet_comparison.py  test_11_transformer.py  test_12_speedup_proof.py  test_13_batchnorm_dropout.py  test_14_delta_vs_full_all.py  test_15_agnews_nlp.py  test_16_imdb_sentiment.py  test_17_dbpedia_nlp.py  test_18_quick_cifar10_resnet20.py  test_19_quick_mnist_cnn.py  test_1_synthetic.py  test_20_resnet20_cifar10_30ep.py  test_21_resnet32_cifar10_30ep.py  test_22_resnet20_cifar10_maxperf.py  test_23_replay_all_scenarios.py  test_24_resnet32_cifar10_maxperf.py  test_25_mnist_taskid_maxperf.py  test_26_fashionmnist_taskid_maxperf.py  test_2_cifar10.py  test_3_mnist.py  test_4_fashionmnist.py  test_5_cifar100.py  test_6_plugin_custom.py  test_7_svhn.py  test_8_stress.py  test_9_analysis.py  test_all.py
test_runs/results/: test_10_resnet_comparison.json  test_11_transformer.json  test_12_speedup_proof.json  test_13_batchnorm_dropout.json  test_18_quick_cifar10_resnet20.json  test_19_quick_mnist_cnn.json  test_1_synthetic.json  test_25_mnist_taskid_maxperf.json  test_2_cifar10.json
tests/: test_delta_framework.py
tests/.tmp_results/: debug_frozen.json
tests/integration/: test_cli_entrypoints.py  test_run.py
tests/unit/: test_delta.py  test_drift.py  test_metrics.py  test_oracle.py  test_policy.py  test_runner.py  test_snapshot.py  test_updater.py  test_web_server.py  test_weighter.py
web/: README.md  __init__.py  assets.py  catalog.py  requirements.txt  server.py
web/frontend/: package-lock.json  package.json
web/frontend/src/: index.html  main.jsx  styles.css
web/static/: app.css  app.js
web/tests/: test_server.py
