[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meld-framework"
version = "0.1.0"
description = "MELD: Manifold-Equivalent Learning with Deployment guarantees"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19",
  "fastapi>=0.115",
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.1",
  "transformers>=4.41",
  "torchvision>=0.16",
  "continuum>=1.2.7",
  "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/anikeaty08/MELD"
Repository = "https://github.com/anikeaty08/MELD.git"
Issues = "https://github.com/anikeaty08/MELD/issues"

[project.optional-dependencies]
benchmark = [
  "avalanche-lib>=0.6.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["meld*"]

[tool.setuptools.package-data]
"meld.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
