[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-framework"
version = "0.3.0"
description = "Provably equivalent continual learning framework with KFAC regularization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "anikeaty08"},
]
keywords = ["continual-learning", "incremental-learning", "class-incremental-learning", "pytorch", "kfac", "fisher"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/anikeaty08/MELD"
Repository = "https://github.com/anikeaty08/MELD.git"
Documentation = "https://github.com/anikeaty08/MELD/blob/main/docs/USAGE.md"

[project.scripts]
delta-run = "delta.demos.cli:main"

[project.optional-dependencies]
vision = [
  "torchvision>=0.16",
]
text = [
  "datasets>=2.19",
  "transformers>=4.41",
  "sentencepiece>=0.1.99",
]
scipy = [
  "scipy>=1.10",
]
full = [
  "delta-framework[vision,text,scipy]",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "build>=1.0",
]

[tool.setuptools.packages.find]
include = ["delta*"]

[tool.setuptools.package-data]
delta = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Commit 5 - 2026-03-28 16:42:36

# Commit 14 - 2026-03-29 02:07:56

# Commit 22 - 2026-03-28 14:07:59

# Commit 24 - 2026-03-28 13:49:42

# Commit 25 - 2026-03-28 20:08:56

# Commit 27 - 2026-03-29 01:01:15

# Commit 30 - 2026-03-29 07:27:55

# Update 19 - 2026-03-28 22:58:46
# Update 22 - 2026-03-29 03:06:08
# Update 27 - 2026-03-29 06:21:49
# Update 35 - 2026-03-28 22:09:25
# Update 30 @ 2026-03-28 11:33:33
# Update 4 @ 2026-03-29 09:32:37
# Update 18 @ 2026-03-28 22:45:04
# Update 10 @ 2026-03-29 08:14:04
# Update 20 @ 2026-03-29 07:25:05